[gd_scene load_steps=5 format=3 uid="uid://dkymbc3w7b3w3"]

[ext_resource type="Texture2D" uid="uid://biexyuywpqie4" path="res://flappy-bird-assets/sprites/pipe-red.png" id="1_5hx20"]
[ext_resource type="Script" path="res://obstaculos.gd" id="1_y7kjy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tcpju"]
size = Vector2(45, 36.054)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i1bj1"]
size = Vector2(48, 138)

[node name="Obstaculos" type="Node2D"]
position = Vector2(-2, 322)
script = ExtResource("1_y7kjy")

[node name="Tuberia1" type="Area2D" parent="."]
position = Vector2(283, 373)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Tuberia1"]
position = Vector2(0, 122)
scale = Vector2(1, 1.7625)
texture = ExtResource("1_5hx20")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tuberia1"]
position = Vector2(-0.5, 122.5)
scale = Vector2(1, 15.56)
shape = SubResource("RectangleShape2D_tcpju")

[node name="Tuberia2" type="Area2D" parent="."]
position = Vector2(277, -90)
rotation = 3.13987
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Tuberia2"]
position = Vector2(0, 122)
scale = Vector2(1, 1.7625)
texture = ExtResource("1_5hx20")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tuberia2"]
position = Vector2(-0.5, 122.5)
scale = Vector2(1, 15.56)
shape = SubResource("RectangleShape2D_tcpju")

[node name="score" type="Area2D" parent="."]
position = Vector2(251, 81)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="score"]
position = Vector2(29, 59)
shape = SubResource("RectangleShape2D_i1bj1")

[connection signal="body_entered" from="Tuberia1" to="." method="_on_tuberia_1_body_entered"]
[connection signal="body_exited" from="Tuberia2" to="." method="_on_tuberia_2_body_exited"]
[connection signal="body_entered" from="score" to="." method="_on_score_body_entered"]
